--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -33,7 +33,7 @@
 
   @media (min-width: $desktop-width) {
     background-image: none;
-    min-height: 660px;
+    min-height: 578px;
     padding-left: 80px;
     padding-top: 80px;
   }
@@ -44,6 +44,10 @@
 
   @media (min-width: $tablet-width) {
     padding-left: 118px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-left: 41px;
   }
 }
 
@@ -66,6 +70,7 @@
 
   @media (min-width: $desktop-width) {
     width: 500px;
+    padding-top: 28px;
   }
 }
 
@@ -84,7 +89,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    margin-bottom: 65px;
+    margin-bottom: 52px;
   }
 }
 
@@ -111,8 +116,8 @@
     height: 499px;
     background-image: url("../img/index-can-desktop.png");
     position: absolute;
-    top: -150px;
-    left: 367px;
+    top: -246px;
+    left: 368px;
 
     @media (min-resolution: 2dppx) {
       background-image: url("../img/index-can-desktop@2x.png");
@@ -134,6 +139,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    width: 25%;
+    padding: 16px 26px;
+    margin-left: 0;
   }
 }
