--- a/source/sass/blocks/matching.scss
+++ b/source/sass/blocks/matching.scss
@@ -65,12 +65,13 @@
   @media (min-width: $tablet-width) {
     position: relative;
     font-size: 16px;
+    width: 36%;
     bottom: 57px;
-    left: 120px;
+    left: 370px;
   }
 
   @media (min-width: $desktop-width) {
     bottom: 55px;
-    left: 133px;
+    left: 630px;
   }
 }
