--- a/source/sass/blocks/location.scss
+++ b/source/sass/blocks/location.scss
@@ -84,12 +84,32 @@
   position: relative;
   background-color: $basic-grey;
   height: 362px;
-  //background-image: url("../img/map-mobile.png");
-  //background-repeat: no-repeat;
-  //background-position: center center;
+  background-image: url("../img/map-mobile.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/map-mobile@2x.png");
+    background-size: 362px auto;
+  }
 
   @media (min-width: $tablet-width) {
     height: 400px;
+    background-image: url("../img/map-tablet.png");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/map-tablet@2x.png");
+      background-size: 400px auto;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    background-image: url("../img/map-desktop.png");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/map-desktop@2x.png");
+      background-size: 400px auto;
+    }
   }
 }
 
@@ -103,7 +123,6 @@
     height: 400px;
   }
 }
-
 
 .location__here {
   position: absolute;
