--- a/source/sass/blocks/variants.scss
+++ b/source/sass/blocks/variants.scss
@@ -9,7 +9,7 @@
   @media (min-width: $desktop-width) {
     margin-top: 84px;
     display: flex;
-    //justify-content: space-between;
+    flex-wrap: wrap;
   }
 }
 
@@ -104,7 +104,6 @@
 
   @media (min-width: $tablet-width) {
     border-bottom: none;
-    //width: 60%;
     font-size: 16px;
     line-height: 24px;
     padding-bottom: 0;
